fixed dark mode button

--- a/index.css
+++ b/index.css
@@ -58,8 +58,3 @@ body{
     margin: 10px;
     border-radius: 20px;
 }
-
-#mode-btn:hover{
-    background-color: lightblue;    
-    color: darkslategray;
-}
